--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.01MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.87MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 波兰-1.47MB/s(Youtube:不良林), server: 217.30.10.63, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 捷克-301.5KB/s(Youtube:不良林), server: v2cross.com.03.v2ce.com, port: 443, type: trojan, password: ZD4dLSBXiMrmzdLd, sni: v2cross.com.03.v2ce.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: storage.starspace.link, port: 443, type: trojan, password: W8gVbKNAZlFzgGPn, sni: storage.starspace.link, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林), server: 213.183.53.200, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇯🇵 日本-3.36MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-227.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.12MB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇳🇱 荷兰-1.84MB/s(Youtube:不良林), server: 213.183.59.211, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇯🇵 日本-668.3KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.29MB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-1.37MB/s(Youtube:不良林), server: 37.120.192.158, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 波兰-1.47MB/s(Youtube:不良林)
-      - 捷克-301.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 波兰-1.47MB/s(Youtube:不良林)
-      - 捷克-301.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 波兰-1.47MB/s(Youtube:不良林)
-      - 捷克-301.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 波兰-1.47MB/s(Youtube:不良林)
-      - 捷克-301.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 波兰-1.47MB/s(Youtube:不良林)
-      - 捷克-301.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 波兰-1.47MB/s(Youtube:不良林)
-      - 捷克-301.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 波兰-1.47MB/s(Youtube:不良林)
-      - 捷克-301.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
