--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: 167.88.61.50, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林), server: 213.183.53.182, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇷🇺 俄罗斯联邦-619.2KB/s(Youtube:不良林), server: 213.183.53.212, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-532.0KB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-222.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇳🇱 荷兰-278.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇳🇱 荷兰-1.05MB/s(Youtube:不良林), server: 213.183.59.211, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇳🇱 荷兰-373.6KB/s(Youtube:不良林), server: 213.183.59.211, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 波兰-256.9KB/s(Youtube:不良林), server: 217.30.10.63, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-668.3KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-699.5KB/s(Youtube:不良林), server: 213.183.53.202, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇷🇺 俄罗斯联邦-583.4KB/s(Youtube:不良林), server: 213.183.53.222, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 38.86.135.36, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 38.86.135.36, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.121.43.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: 38.75.136.102, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-619.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-222.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-278.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-373.6KB/s(Youtube:不良林)
-      - 波兰-256.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-699.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-619.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-222.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-278.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-373.6KB/s(Youtube:不良林)
-      - 波兰-256.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-699.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-619.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-222.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-278.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-373.6KB/s(Youtube:不良林)
-      - 波兰-256.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-699.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-619.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-222.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-278.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-373.6KB/s(Youtube:不良林)
-      - 波兰-256.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-699.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-619.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-222.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-278.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-373.6KB/s(Youtube:不良林)
-      - 波兰-256.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-699.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-619.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-222.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-278.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-373.6KB/s(Youtube:不良林)
-      - 波兰-256.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-699.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-619.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-222.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-278.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.05MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-373.6KB/s(Youtube:不良林)
-      - 波兰-256.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-699.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
